<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:padding="15dp"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:id="@+id/loca_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_outline_location" />

        <TextView
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/locationIcon"
            android:gravity="center"
            android:text="@string/baku_aze"
            android:textColor="@color/black" />

    </RelativeLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_round_account_circle"
        android:text="@string/skip_here"
        android:textColor="#515151"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/find_best_services_for_you"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loca_relative" />

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            style="@style/Widget.AppCompat.Light.SearchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/find_best_ser"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/ic_baseline_search"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/todo"
            android:elevation="8dp"
            android:src="@drawable/filtere" />

    </LinearLayout>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_panel" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category">

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="95dp"
                android:layout_height="106dp"
                android:layout_margin="10dp"
                android:background="@drawable/mator_layout">

                <ImageView
                    android:id="@+id/motor_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/engine" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/motor_image"
                    android:textColor="@color/gray"
                    android:layout_centerInParent="true"
                    android:text="@string/motor"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="95dp"
                android:layout_height="106dp"
                android:layout_margin="10dp"
                android:background="@drawable/mator_layout">

                <ImageView
                    android:id="@+id/filter_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/filtrr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/filter_image"
                    android:layout_centerInParent="true"
                    android:text="@string/filter"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="95dp"
                android:layout_height="106dp"
                android:layout_margin="10dp"
                android:background="@drawable/mator_layout">

                <ImageView
                    android:id="@+id/Lorem_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_directions_car" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Lorem_image"
                    android:layout_centerInParent="true"
                    android:text="@string/lorem"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="95dp"
                android:layout_height="106dp"
                android:layout_margin="10dp"
                android:background="@drawable/mator_layout">

                <ImageView
                    android:id="@+id/Lorem2_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_directions_car" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Lorem2_image"
                    android:layout_centerInParent="true"
                    android:text="@string/lorem"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="95dp"
                android:layout_height="106dp"
                android:layout_margin="10dp"
                android:background="@drawable/mator_layout">

                <ImageView
                    android:id="@+id/Lorem21_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_directions_car" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Lorem21_image"
                    android:layout_centerInParent="true"
                    android:text="@string/lorem"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/service_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_scroll" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


